--- a/06-AdvancedExpress/PostRequestDemo/package.json
+++ b/06-AdvancedExpress/PostRequestDemo/package.json
@@ -9,6 +9,7 @@
   "author": "Damian Demasi",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1"
   }
